# pme-mini

./: .claudeignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  __init__.py  addon.py  class_diagram_generator.py  pme.py  pyproject.toml
.claude/rules/: api.md  architecture.md  development.md  loader.md  logging.md  testing.md
.claude/scripts/: analyze_log.py
core/: __init__.py  protocols.py  schemas.py
infra/: __init__.py  logger.py  registry.py
menus/: __init__.py  pie_menu.py
ui/: __init__.py  panels.py
